--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 </div>
 <div class="hidden">
   <h1>Youtube video</h1>
-  <iframe src="/video" class="video"></iframe>
+  <iframe src="https://gamers-squad.jcmainclr.xyz/video" class="video"></iframe>
 
 </div>
 </body>
